placeholder new and margin top fix on mobile

--- a/src/views/blogs/blogs.module.scss
+++ b/src/views/blogs/blogs.module.scss
@@ -52,9 +52,6 @@
 
 @media (max-width: 480px) {
     .page{
-        .filter{
-            margin-top: 40px;
-        }
         h1{
             font-size: 38px;
         }
